fixed spacing issue in gallery

--- a/src/scss/pages/home/gallery.scss
+++ b/src/scss/pages/home/gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   width: 100%;
-  height: 50rem;
+  height: 100%;
 
   &__container {
     display: grid;
@@ -8,7 +8,6 @@
 
     @media (max-width: 68.75em) {
       grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
     }
   }
 
